2020-02-24 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_invisible.c: Replace GTK_WIDGET_SET_FLAGS with
      gtk_widget_set_visible. Utilize macros:

          * geda_set_widget_style

    * src/widgets/geda_label.c: Utilize macro:

          * geda_get_misc_xalign

2020-02-21 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_image_menu_item.c: Utilize macros:

          * geda_get_container_border_width
          * geda_get_widget_style

    * src/widgets/geda_invisible.c: Utilize macros:

          * geda_get_widget_style
          * geda_set_widget_window

    * src/widgets/geda_label.c: Utilize macro:

          * geda_get_widget_style

2020-02-13 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Cast gtk_widget_get_parent return pointer
    * to void for geda_get_widget_parent Gtk >= 3. Add macros:

          * geda_set_widget_state

    * src/widgets/geda_handlebox.c: Utilize macros:

          * geda_get_widget_style
          * geda_get_widget_state

2020-02-12 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_handlebox.h: Remove GedaHandleBox members deskoff_x and
      deskoff_y.

    * src/widgets/geda_handlebox.c: Eliminate the relative offset between the
      the desktop and the root window; deskoff_x and deskoff_y. Eliminate
      desk_x and desk_y in geda_handle_box_button_press and the call to
      deprecated gdk_window_get_deskrelative_origin. Utilize macros:

          * geda_get_widget_window
          * geda_get_widget_requisition

2020-02-07 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_handlebox.c: Revise geda_handle_box_realize to utilize
      geda_set_widget_style. Revise geda_handle_box_map to use an ancillary
      GtkWidget pointer and utilize geda_get_child_widget.

2020-02-06 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macro:

          * geda_set_widget_style
          * geda_set_widget_window
